Creacion mapa de acciones climaticas

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <a href="riesgo.html" class="navbar-link">Riesgo</a>
         <a href="amenazas.html" class="navbar-link">Amenazas</a>
         <a href="impactos.html" class="navbar-link">Impactos</a>
+        <a href="acciones-climaticas.html" class="navbar-link">Acciones Climáticas</a>
       </div>
     </div>
   </nav>
@@ -42,15 +43,15 @@
   <section class="hero">
     <div class="hero-content">
       <h1 class="hero-title">Cambio Climático en Tlaxcala</h1>
-      <p class="hero-subtitle">
+<!--       <p class="hero-subtitle">
         Explora historias interactivas sobre el cambio climático en nuestro municipio
-      </p>
+      </p> -->
 
       <!-- Grid de Story Maps -->
       <div class="story-maps-grid">
         <!-- Card Vulnerabilidad -->
         <div class="story-map-card card-vulnerabilidad" onclick="location.href='vulnerabilidad.html'">
-          <div class="story-map-icon">🛡️</div>
+<!--           <div class="story-map-icon">🛡️</div> -->
           <h2 class="story-map-title">Vulnerabilidad</h2>
           <p class="story-map-description">
             Descubre las zonas más vulnerables ante el cambio climático en Tlaxcala
@@ -60,7 +61,7 @@
 
         <!-- Card Riesgo -->
         <div class="story-map-card card-riesgo" onclick="location.href='riesgo.html'">
-          <div class="story-map-icon">⚠️</div>
+          <!-- <div class="story-map-icon">⚠️</div> -->
           <h2 class="story-map-title">Riesgo</h2>
           <p class="story-map-description">
             Analiza los principales riesgos climáticos que enfrenta la región
@@ -70,7 +71,7 @@
 
         <!-- Card Amenazas -->
         <div class="story-map-card card-amenazas" onclick="location.href='amenazas.html'">
-          <div class="story-map-icon">🌪️</div>
+          <!-- <div class="story-map-icon">🌪️</div> -->
           <h2 class="story-map-title">Amenazas</h2>
           <p class="story-map-description">
             Conoce las amenazas climáticas presentes y futuras en el territorio
@@ -80,12 +81,22 @@
 
         <!-- Card Impactos -->
         <div class="story-map-card card-impactos" onclick="location.href='impactos.html'">
-          <div class="story-map-icon">🌡️</div>
+          <!-- <div class="story-map-icon">🌡️</div> -->
           <h2 class="story-map-title">Impactos</h2>
           <p class="story-map-description">
             Observa los impactos reales del cambio climático en la comunidad
           </p>
-          <a href="amenazas.html" class="story-map-button">Explorar</a>
+          <a href="impactos.html" class="story-map-button">Explorar</a>
+        </div>
+
+        <!-- Card Acciones Climáticas -->
+        <div class="story-map-card card-acciones" onclick="location.href='acciones-climaticas.html'">
+          <!-- <div class="story-map-icon">🌱</div> -->
+          <h2 class="story-map-title">Acciones Climáticas</h2>
+          <p class="story-map-description">
+            Explora los proyectos y programas de acción climática en Tlaxcala
+          </p>
+          <a href="acciones-climaticas.html" class="story-map-button">Explorar</a>
         </div>
       </div>
     </div>
