--- a/riesgo.html
+++ b/riesgo.html
@@ -55,6 +55,7 @@
           <a href="riesgo.html" class="navbar-link active">Riesgo</a>
           <a href="amenazas.html" class="navbar-link">Amenazas</a>
           <a href="impactos.html" class="navbar-link">Impactos</a>
+          <a href="acciones-climaticas.html" class="navbar-link">Acciones Climáticas</a>
         </div>
       </div>
     </nav>
