--- a/riesgo.html
+++ b/riesgo.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/story-map.css" />
+    <link rel="stylesheet" href="css/riesgo.css" />
 
     <!-- OpenLayers CSS -->
     <link
@@ -70,7 +71,7 @@
         <!-- CAPÍTULO 1 -->
         <section class="chapter" id="risk-chapter-1" data-chapter="1">
           <!-- Título del mapa -->
-          <h2 class="map-title">Riesgo clim&aacute;tico por municipio</h2>
+          <h2 class="map-title">Riesgo climático por municipio</h2>
 
           <!-- Card de texto (izquierda, 30%) -->
           <div class="chapter-text">
@@ -131,6 +132,38 @@
             </div>
           </div>
         </section>
+
+        <!-- CAPÍTULO 3 -->
+        <section class="chapter" id="risk-chapter-3" data-chapter="3">
+          <!-- Título del capítulo -->
+          <h2 class="map-title">Atlas de Riesgo Municipal</h2>
+
+          <!-- Card de texto (izquierda, 30%) -->
+          <div class="chapter-text">
+            <!-- <h2 class="chapter-title">Atlas Municipales</h2> -->
+            <div class="chapter-content">
+<!--               <p>
+                Los Atlas de Riesgo Municipales identifican las amenazas, vulnerabilidades y riesgos específicos de cada municipio ante fenómenos naturales.
+              </p>
+              <p>
+                Estos documentos son herramientas fundamentales para la toma de decisiones en materia de protección civil y ordenamiento territorial.
+              </p> -->
+              <p>
+                <strong>Consulta los Atlas de Riesgo disponibles para los siguientes municipios:</strong>
+              </p>
+              <div id="atlas-info" style="display: none;">
+                <h3></h3>
+                <p></p>
+                <a href="#" target="_blank" class="btn-atlas">Ver Atlas de Riesgo</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Mapa (derecha, 70%) -->
+          <div class="chapter-map">
+            <div class="map-container" id="map-3"></div>
+          </div>
+        </section>
       </div>
 
       <!-- Timeline inferior -->
@@ -141,7 +174,11 @@
         </div>
         <div class="timeline-item" data-chapter="2">
           <div class="timeline-circle">2</div>
-          <div class="timeline-label"></div>
+          <div class="timeline-label">Eventos y Declaratorias</div>
+        </div>
+        <div class="timeline-item" data-chapter="3">
+          <div class="timeline-circle">3</div>
+          <div class="timeline-label">Atlas Municipales</div>
         </div>
       </div>
 
@@ -159,70 +196,7 @@
     </div>
 
     <!-- JavaScript -->
-    <script type="module" src="js/main.js"></script>
-
-    <script>
-      // Mostrar/ocultar navbar con el indicador
-      const navbar = document.querySelector(".navbar");
-      const navbarIndicator = document.getElementById("navbarIndicator");
-
-      // Mostrar navbar al hacer hover sobre el indicador
-      navbarIndicator.addEventListener("mouseenter", () => {
-        navbar.classList.add("visible");
-      });
-
-      // Mantener navbar visible mientras el mouse está sobre él
-      navbar.addEventListener("mouseenter", () => {
-        navbar.classList.add("visible");
-      });
-
-      // Ocultar navbar cuando el mouse sale
-      navbar.addEventListener("mouseleave", () => {
-        navbar.classList.remove("visible");
-      });
-
-      // Click en indicador para toggle del navbar
-      navbarIndicator.addEventListener("click", () => {
-        navbar.classList.toggle("visible");
-      });
-
-      // Toggle del menú móvil (inline para que funcione antes de cargar main.js)
-      const navbarToggle = document.getElementById("navbarToggle");
-      const navbarMenu = document.getElementById("navbarMenu");
-
-      navbarToggle.addEventListener("click", () => {
-        navbarToggle.classList.toggle("active");
-        navbarMenu.classList.toggle("active");
-        // Asegurar que el navbar esté visible cuando se abre el menú móvil
-        navbar.classList.add("visible");
-      });
-
-      // Cerrar menú al hacer click en un link
-      const navbarLinks = document.querySelectorAll(".navbar-link");
-      navbarLinks.forEach((link) => {
-        link.addEventListener("click", () => {
-          navbarToggle.classList.remove("active");
-          navbarMenu.classList.remove("active");
-        });
-      });
-
-      // Efecto scroll en navbar
-      window.addEventListener("scroll", () => {
-        if (window.scrollY > 50) {
-          navbar.classList.add("scrolled");
-        } else {
-          navbar.classList.remove("scrolled");
-        }
-      });
-
-      // Event listener para el botón Atlas de Riesgo
-      const btnAtlasRiesgo = document.getElementById("btnAtlasRiesgo");
-      if (btnAtlasRiesgo) {
-        btnAtlasRiesgo.addEventListener("click", () => {
-          // Abrir el PDF del Atlas de Riesgo en una nueva pestaña
-          window.open("http://rmgir.proyectomesoamerica.org/PDFAtlasEstatales/TLAXCALA_2006.pdf", "_blank");
-        });
-      }
-    </script>
+    <script src="js/config/riesgo-config.js"></script>
+    <script src="js/config/riesgo-main.js"></script>
   </body>
 </html>
