Ajustes en el popup de acciones climaticas

--- a/acciones-climaticas.html
+++ b/acciones-climaticas.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/acciones-climaticas.css">
+  <link rel="stylesheet" href="css/popups.css">
   <link rel="stylesheet" href="css/acciones-responsive.css">
 </head>
 <body>
