--- a/acciones-climaticas.html
+++ b/acciones-climaticas.html
@@ -169,22 +169,60 @@
 
     <!-- Timeline -->
     <div class="timeline-container">
-      <div class="timeline-header">
-        <h3 class="timeline-title">Línea de Tiempo</h3>
-        <span class="timeline-range" id="timelineRange">Cargando...</span>
-      </div>
-      <div class="timeline-content">
-        <div class="timeline-track">
-          <div class="timeline-bar"></div>
-          <div class="timeline-slider" id="timelineSlider">
-            <input type="range" id="timelineStart" class="timeline-input" min="2021" max="2024" value="2021">
-            <input type="range" id="timelineEnd" class="timeline-input" min="2021" max="2024" value="2024">
+      <div class="timeline-wrapper">
+        <div class="timeline-calendar-icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+            <line x1="16" y1="2" x2="16" y2="6"></line>
+            <line x1="8" y1="2" x2="8" y2="6"></line>
+            <line x1="3" y1="10" x2="21" y2="10"></line>
+          </svg>
+        </div>
+        <div class="timeline-graph" id="timelineGraph">
+          <div class="timeline-line"></div>
+          <div class="timeline-markers" id="timelineMarkers">
+            <!-- Los marcadores se generarán dinámicamente por JavaScript -->
           </div>
         </div>
       </div>
-      <p class="timeline-note">Filtra proyectos por año</p>
     </div>
   </main>
+
+  <!-- Modal de Rango de Fechas -->
+  <div id="dateRangeModal" class="date-modal-overlay" style="display: none;">
+    <div class="date-modal">
+      <div class="date-modal-header">
+        <h3 class="date-modal-title">Filtrar por Rango de Fechas</h3>
+        <button id="closeDateModal" class="date-modal-close" aria-label="Cerrar">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <line x1="18" y1="6" x2="6" y2="18"></line>
+            <line x1="6" y1="6" x2="18" y2="18"></line>
+          </svg>
+        </button>
+      </div>
+
+      <div class="date-modal-body">
+        <div class="date-input-group">
+          <label for="startDate" class="date-label">Fecha de inicio</label>
+          <input type="date" id="startDate" class="date-input">
+        </div>
+
+        <div class="date-input-group">
+          <label for="endDate" class="date-label">Fecha de fin</label>
+          <input type="date" id="endDate" class="date-input">
+        </div>
+      </div>
+
+      <div class="date-modal-footer">
+        <button id="clearDateRange" class="date-btn date-btn-secondary">
+          Limpiar
+        </button>
+        <button id="applyDateRange" class="date-btn date-btn-primary">
+          Aplicar Filtro
+        </button>
+      </div>
+    </div>
+  </div>
 
   <!-- Footer -->
   <footer class="footer">
