--- a/acciones-climaticas.html
+++ b/acciones-climaticas.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="css/popups.css">
   <link rel="stylesheet" href="css/filters.css">
   <link rel="stylesheet" href="css/acciones-responsive.css">
+  <link rel="stylesheet" href="css/toast.css">
 </head>
 <body>
   <!-- Navbar -->
@@ -224,6 +225,24 @@
     </div>
   </div>
 
+  <!-- Modal para ver todas las ubicaciones -->
+  <div id="ubicacionesModal" class="media-modal-overlay" style="display: none;">
+    <div class="media-modal media-modal-large">
+      <div class="media-modal-header">
+        <h3 class="media-modal-title">Todas las Ubicaciones</h3>
+        <button id="closeUbicacionesModal" class="media-modal-close" aria-label="Cerrar">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <line x1="18" y1="6" x2="6" y2="18"></line>
+            <line x1="6" y1="6" x2="18" y2="18"></line>
+          </svg>
+        </button>
+      </div>
+      <div class="media-modal-body">
+        <div id="ubicacionesList" class="ubicaciones-list-container"></div>
+      </div>
+    </div>
+  </div>
+
   <!-- Footer -->
   <footer class="footer">
     <p>&copy; 2024 Cambio Climático Tlaxcala. Todos los derechos reservados.</p>
@@ -239,6 +258,7 @@
   <script src="js/acciones/config.js"></script>
   <script src="js/acciones/data-adapter.js"></script>
   <script src="js/acciones/data.js"></script>
+  <script src="js/acciones/toast.js"></script>
   <script src="js/acciones/popup.js"></script>
   <script src="js/acciones/map.js"></script>
   <script src="js/acciones/filters.js"></script>
