Actualizacion seccion Riesgo

--- a/riesgo.html
+++ b/riesgo.html
@@ -180,7 +180,7 @@
         <!-- CAPÍTULO 3 -->
         <section class="chapter" id="risk-chapter-3" data-chapter="3">
           <!-- Título del capítulo -->
-          <h2 class="map-title">Atlas de Riesgo Municipal</h2>
+          <!-- <h2 class="map-title">Atlas de Riesgo Municipal</h2> -->
 
           <!-- Card de texto (izquierda, 30%) -->
           <div class="chapter-text">
@@ -193,19 +193,19 @@
                 Estos documentos son herramientas fundamentales para la toma de decisiones en materia de protección civil y ordenamiento territorial.
               </p> -->
               <p>
-                <strong>Consulta los Atlas de Riesgo disponibles para los siguientes municipios:</strong>
+                <!-- <strong>Consulta los Atlas de Riesgo disponibles para los siguientes municipios:</strong> -->
               </p>
-              <div id="atlas-info" style="display: none;">
+<!--               <div id="atlas-info" style="display: none;">
                 <h3></h3>
                 <p></p>
                 <a href="#" target="_blank" class="btn-atlas">Ver Atlas de Riesgo</a>
-              </div>
+              </div> -->
             </div>
           </div>
 
           <!-- Mapa (derecha, 70%) -->
           <div class="chapter-map">
-            <div class="map-container" id="map-3"></div>
+            <!-- <div class="map-container" id="map-3"></div> -->
           </div>
         </section>
       </div>
@@ -222,7 +222,7 @@
         </div>
         <div class="timeline-item" data-chapter="3">
           <div class="timeline-circle">3</div>
-          <div class="timeline-label">Atlas Municipales</div>
+          <div class="timeline-label">Capitulo 3</div>
         </div>
       </div>
 
