Agregar capas de geoserver en riesgo

--- a/amenazas.html
+++ b/amenazas.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Story Map sobre las Amenazas Clim·ticas en Tlaxcala"
+      content="Story Map sobre las Amenazas Clim&aacute;ticas en Tlaxcala"
     />
-    <title>Amenazas Clim·ticas - Tlaxcala</title>
+    <title>Amenazas Clim&aacute;ticas - Tlaxcala</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/variables.css" />
@@ -38,11 +38,11 @@
     <nav class="navbar">
       <div class="navbar-container">
         <a href="index.html" class="navbar-brand">
-          <!--         <span class="navbar-brand-icon"><</span> -->
+          <!--         <span class="navbar-brand-icon">&#127757;</span> -->
           <span>Tlaxcala</span>
         </a>
 
-        <button class="navbar-toggle" id="navbarToggle" aria-label="Abrir men˙">
+        <button class="navbar-toggle" id="navbarToggle" aria-label="Abrir men&uacute;">
           <span class="navbar-toggle-line"></span>
           <span class="navbar-toggle-line"></span>
           <span class="navbar-toggle-line"></span>
@@ -54,7 +54,7 @@
           <a href="riesgo.html" class="navbar-link">Riesgo</a>
           <a href="amenazas.html" class="navbar-link active">Amenazas</a>
           <a href="impactos.html" class="navbar-link">Impactos</a>
-          <a href="acciones-climaticas.html" class="navbar-link">Acciones Clim·ticas</a>
+          <a href="acciones-climaticas.html" class="navbar-link">Acciones Clim&aacute;ticas</a>
         </div>
       </div>
     </nav>
@@ -64,35 +64,35 @@
 
     <!-- Contenedor principal del Story Map -->
     <div class="story-map-container">
-      <!-- Contenedor de capÌtulos con scroll-snap -->
+      <!-- Contenedor de cap&iacute;tulos con scroll-snap -->
       <div class="chapters-container" id="chaptersContainer">
-        <!-- CAPÕTULO 1 -->
+        <!-- CAP&Iacute;TULO 1 -->
         <section class="chapter" id="chapter-1" data-chapter="1">
-          <!-- TÌtulo del mapa -->
-          <h2 class="map-title">Amenazas clim·ticas por municipio</h2>
+          <!-- T&iacute;tulo del mapa -->
+          <h2 class="map-title">Amenazas clim&aacute;ticas por municipio</h2>
 
           <!-- Mapa -->
           <div class="chapter-map">
             <div class="map-container" id="map-1"></div>
-            <!-- Los controles de capas se generan din·micamente -->
+            <!-- Los controles de capas se generan din&aacute;micamente -->
           </div>
 
           <!-- Card de texto -->
           <div class="chapter-text">
-            <!-- <span class="chapter-number">CapÌtulo 1</span> -->
+            <!-- <span class="chapter-number">Cap&iacute;tulo 1</span> -->
             <h2 class="chapter-title">
-              Amenazas clim·ticas
+              Amenazas clim&aacute;ticas
             </h2>
             <div class="chapter-content">
               <p>
-                Las amenazas clim·ticas son eventos o fenÛmenos relacionados con el clima que pueden causar daÒos o pÈrdidas:
+                Las amenazas clim&aacute;ticas son eventos o fen&oacute;menos relacionados con el clima que pueden causar da&ntilde;os o p&eacute;rdidas:
               </p>
               <p>
                 <ul>
                   <li>* Temperaturas extremas.</li>
                   <li>* Lluvias intensas.</li>
-                  <li>* SequÌas prolongadas.</li>
-                  <li>* FenÛmenos meteorolÛgicos extremos.</li>
+                  <li>* Sequ&iacute;as prolongadas.</li>
+                  <li>* Fen&oacute;menos meteorol&oacute;gicos extremos.</li>
                 </ul>
               </p>
               <p>
@@ -101,24 +101,24 @@
             </div>
           </div>
 
-<!-- Card combinada de gr·fico e info (sin borde entre ellas) -->
+<!-- Card combinada de gr&aacute;fico e info (sin borde entre ellas) -->
 <div class="chapter-chart-info">
-  <!-- TÌtulo ˙nico para toda la card -->
-  <h2 class="chart-info-title">PoblaciÛn expuesta a amenazas clim·ticas</h2>
+  <!-- T&iacute;tulo &uacute;nico para toda la card -->
+  <h2 class="chart-info-title">Poblaci&oacute;n expuesta a amenazas clim&aacute;ticas</h2>
 
   <div class="chart-info-content">
-    <!-- SecciÛn del gr·fico -->
+    <!-- Secci&oacute;n del gr&aacute;fico -->
     <div class="chart-section">
       <div class="chart-container">
         <canvas id="chart-1"></canvas>
       </div>
     </div>
 
-    <!-- SecciÛn de texto explicativo -->
+    <!-- Secci&oacute;n de texto explicativo -->
     <div class="info-section">
       <div class="info-content">
         <p>
-          Las amenazas clim·ticas son eventos hidrometeorolÛgicos extremos que pueden impactar negativamente a la poblaciÛn y al territorio. La identificaciÛn y el an·lisis de estas amenazas son fundamentales para la planificaciÛn territorial y la gestiÛn del riesgo. Para conocer a detalle las variables y su an·lisis, te invitamos a consultar el PACCET 2023-2030.
+          Las amenazas clim&aacute;ticas son eventos hidrometeorol&oacute;gicos extremos que pueden impactar negativamente a la poblaci&oacute;n y al territorio. La identificaci&oacute;n y el an&aacute;lisis de estas amenazas son fundamentales para la planificaci&oacute;n territorial y la gesti&oacute;n del riesgo. Para conocer a detalle las variables y su an&aacute;lisis, te invitamos a consultar el PACCET 2023-2030.
         </p>
       </div>
     </div>
@@ -131,37 +131,115 @@
       <div class="timeline" id="timeline">
         <div class="timeline-item" data-chapter="1">
           <div class="timeline-circle">1</div>
-          <div class="timeline-label">Amenazas clim·ticas</div>
+          <div class="timeline-label">Amenazas clim&aacute;ticas</div>
         </div>
       </div>
 
-      <!-- Botones de navegaciÛn -->
+      <!-- Botones de navegaci&oacute;n -->
       <div class="nav-buttons left" id="navButtonsLeft">
-        <button class="nav-btn" id="btnPrev" aria-label="CapÌtulo anterior">
-          ê
+        <button class="nav-btn" id="btnPrev" aria-label="Cap&iacute;tulo anterior">
+          ‚Üê
         </button>
       </div>
       <div class="nav-buttons right" id="navButtonsRight">
-        <button class="nav-btn" id="btnNext" aria-label="Siguiente capÌtulo">
-          í
+        <button class="nav-btn" id="btnNext" aria-label="Siguiente cap&iacute;tulo">
+          ‚Üí
         </button>
       </div>
     </div>
 
     <!-- JavaScript -->
-    <script src="js/config/amenazas-config.js"></script>
-    <script>
+    <script type="module">
+      import { storyMapConfig } from './js/config/amenazas-config.js';
+
+      // ===== INICIALIZACI√ìN DEL MAPA =====
+      document.addEventListener('DOMContentLoaded', () => {
+        const capituloActual = storyMapConfig.capitulos[0]; // Cap√≠tulo 1
+
+        // Crear el mapa
+        const map = new ol.Map({
+          target: 'map-1',
+          layers: [
+            new ol.layer.Tile({
+              source: new ol.source.OSM(),
+            }),
+          ],
+          view: new ol.View({
+            center: ol.proj.fromLonLat(capituloActual.mapa.centro),
+            zoom: capituloActual.mapa.zoom,
+          }),
+          controls: ol.control.defaults.defaults({
+            zoom: true,
+            attribution: false,
+          }),
+        });
+
+        // Agregar capas WMS
+        capituloActual.mapa.capas.forEach(capaConfig => {
+          if (capaConfig.tipo === 'wms') {
+            const wmsLayer = new ol.layer.Tile({
+              source: new ol.source.TileWMS({
+                url: capaConfig.url,
+                params: {
+                  'LAYERS': capaConfig.layers,
+                  'TILED': true,
+                },
+                serverType: 'geoserver',
+              }),
+              visible: capaConfig.visible,
+            });
+            map.addLayer(wmsLayer);
+          }
+        });
+
+        // Cargar y renderizar el gr√°fico
+        if (capituloActual.grafico) {
+          Papa.parse(capituloActual.grafico.datos, {
+            download: true,
+            header: true,
+            complete: (results) => {
+              const ctx = document.getElementById('chart-1').getContext('2d');
+              const config = capituloActual.grafico.config;
+
+              const labels = results.data.map(row => row[config.etiqueta]);
+              const valores = results.data.map(row => parseFloat(row[config.valor]));
+
+              new Chart(ctx, {
+                type: capituloActual.grafico.tipo,
+                data: {
+                  labels: labels,
+                  datasets: [{
+                    data: valores,
+                    backgroundColor: config.colores,
+                  }]
+                },
+                options: {
+                  responsive: true,
+                  maintainAspectRatio: false,
+                  plugins: {
+                    legend: {
+                      display: config.mostrarLeyenda,
+                      position: 'right',
+                    },
+                  },
+                },
+              });
+            }
+          });
+        }
+      });
+
       // ===== NAVBAR =====
       const navbarToggle = document.getElementById("navbarToggle");
       const navbarMenu = document.getElementById("navbarMenu");
 
-      // Toggle men˙ mÛvil
+      // Toggle men√∫ m√≥vil
       navbarToggle.addEventListener("click", () => {
         navbarToggle.classList.toggle("active");
         navbarMenu.classList.toggle("active");
       });
 
-      // Cerrar men˙ al hacer click en un link
+      // Cerrar men√∫ al hacer click en un link
       const navbarLinks = document.querySelectorAll(".navbar-link");
       navbarLinks.forEach((link) => {
         link.addEventListener("click", () => {
@@ -190,7 +268,7 @@
         navbar.classList.add("visible");
       });
 
-      // Mantener navbar visible mientras el mouse est· sobre Èl
+      // Mantener navbar visible mientras el mouse est√° sobre √©l
       navbar.addEventListener("mouseenter", () => {
         navbar.classList.add("visible");
       });
