Agregar capas de geoserver en riesgo

--- a/riesgo.html
+++ b/riesgo.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Story Map sobre el Riesgo Clim&aacute;tico en Tlaxcala"
+      content="Story Map sobre el Riesgo Climático en Tlaxcala"
     />
-    <title>Riesgo Clim&aacute;tico - Tlaxcala</title>
+    <title>Riesgo Climático - Tlaxcala</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/variables.css" />
@@ -75,7 +75,7 @@
 
           <!-- Card 1: Texto + Botón + Grid de botones (40%, 70%) -->
           <div class="risk-card-1">
-            <h2 class="chapter-title">&iquest;Qu&eacute; es el riesgo?</h2>
+            <h2 class="chapter-title">&iquest;Qué es el riesgo?</h2>
             <div class="chapter-content">
               <p>
                 El riesgo es la posibilidad de que una amenaza, como una inundación o sequía, cause daños reales en una comunidad, área o sector.
@@ -133,17 +133,17 @@
 
           <!-- Card 1: Texto con lista de eventos (40%, 60%) -->
           <div class="risk-card-1">
-            <h2 class="chapter-title">Eventos Clim&aacute;ticos en Tlaxcala</h2>
+            <h2 class="chapter-title">Eventos Climáticos en Tlaxcala</h2>
             <div class="chapter-content">
               <p>
-                En Tlaxcala, los riesgos clim&aacute;ticos se manifiestan en heladas, lluvias intensas, sequ&iacute;as, granizadas e incluso nevadas at&iacute;picas. Estos fen&oacute;menos, cada vez m&aacute;s frecuentes por el cambio clim&aacute;tico, afectan cosechas, viviendas, infraestructura y la salud de la poblaci&oacute;n.
+                En Tlaxcala, los riesgos climáticos se manifiestan en heladas, lluvias intensas, sequías, granizadas e incluso nevadas atípicas. Estos fenómenos, cada vez más frecuentes por el cambio climático, afectan cosechas, viviendas, infraestructura y la salud de la población.
               </p>
               <ul class="events-list">
                 <li>&#10052;&#65039; Nevadas, heladas y granizadas: 197 eventos.</li>
                 <li>&#127783;&#65039; Lluvias intensas: 121 eventos.</li>
-                <li>&#127797; Sequ&iacute;as: 88 eventos.</li>
+                <li>&#127797; Sequías: 88 eventos.</li>
                 <li>&#10052;&#65039; Heladas reportadas aparte: 61 eventos.</li>
-                <li>&#127755; Actividad volc&aacute;nica (Popocat&eacute;petl): 60 eventos.</li>
+                <li>&#127755; Actividad volcánica (Popocatépetl): 60 eventos.</li>
                 <li>&#127758; Sismos: 40 eventos.</li>
                 <li>&#129398; Bajas temperaturas: 17 eventos.</li>
                 <li>&#127744; Ciclones tropicales: 5 eventos.</li>
